--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,8 @@ __pycache__/
 .idea/
 .ipynb_checkpoints/
 # Ignore content unless it's a CSV
-content/*
-!content/*.csv
-!content/*/*.csv
+content/**/*
+!content/
+!content/*/
+!content/**/*.csv
 source/
