--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -26,8 +26,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          playwright install chromium
-          playwright install-deps
+          python -m playwright install chromium
+          python -m playwright install-deps
 
       - name: Run Scrapers
         env:
