Ci: Enable all scrapers and set optimized concurrency (Max Tabs=5)

--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -31,12 +31,29 @@ jobs:
 
       - name: Run Scrapers
         env:
-          MAX_CONCURRENT_TABS: 2
+          MAX_CONCURRENT_TABS: 5
           TAKE_SCREENSHOT: "False"
           BLOCK_IMAGES: "True"
         run: |
-          echo "Starting MW Test Run..."
+          echo "Starting Daily Promotion Scraping..."
+
+          echo "1. Scraping FPT Shop..."
+          python3 code/1-Apple_FPT_playwright.py
+
+          echo "2. Scraping Mobile World..."
           python3 code/2-Apple_MW_playwright.py
+
+          echo "3. Scraping Viettel Store..."
+          python3 code/3-Apple_Viettel_playwright.py
+
+          echo "4. Scraping Hoang Ha Mobile..."
+          python3 code/4-Apple_HoangHa_playwright.py
+
+          echo "5. Scraping Di Dong Viet..."
+          python3 code/5-Apple_DDV_playwright.py
+
+          echo "6. Scraping CellphoneS..."
+          python3 code/6-Apple_CPS_playwright.py
 
       - name: Generate Report
         run: |
