--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -33,7 +33,7 @@ jobs:
         env:
           MAX_CONCURRENT_TABS: 5
           TAKE_SCREENSHOT: "False"
-          BLOCK_IMAGES: "True"
+          BLOCK_IMAGES: "False"
         run: |
           echo "Starting Daily Promotion Scraping..."
 
