--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -42,6 +42,8 @@ jobs:
           ENABLE_PROXY_HOANGHA: "False"
           ENABLE_PROXY_DDV: "False"
           ENABLE_PROXY_CPS: "False"
+          # Test Mode (True/False) - Limits to 4 URLs
+          TEST_MODE: "True"
         run: |
           echo "Starting Daily Promotion Scraping..."
 
