Config: Disable Proxy for FPT & MW (User request) and restore MAX_CONCURRENT_TABS to 5

--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -31,13 +31,13 @@ jobs:
 
       - name: Run Scrapers
         env:
-          MAX_CONCURRENT_TABS: 2
+          MAX_CONCURRENT_TABS: 5
           TAKE_SCREENSHOT: "False"
           BLOCK_IMAGES: "True"
           PROXY_SERVER: ${{ secrets.PROXY_SERVER }}
           # Proxy Toggles (True/False)
           ENABLE_PROXY_FPT: "False"
-          ENABLE_PROXY_MW: "True"
+          ENABLE_PROXY_MW: "False"
           ENABLE_PROXY_VIETTEL: "False"
           ENABLE_PROXY_HOANGHA: "False"
           ENABLE_PROXY_DDV: "False"
