--- a/.github/workflows/daily_scrape.yml
+++ b/.github/workflows/daily_scrape.yml
@@ -47,11 +47,11 @@ jobs:
         run: |
           echo "Starting Daily Promotion Scraping..."
 
-          echo "1. Scraping FPT Shop..."
-          python3 code/1-Apple_FPT_playwright.py
+          # echo "1. Scraping FPT Shop..."
+          # python3 code/1-Apple_FPT_playwright.py
 
-          echo "2. Scraping Mobile World..."
-          python3 code/2-Apple_MW_playwright.py
+          # echo "2. Scraping Mobile World..."
+          # python3 code/2-Apple_MW_playwright.py
 
           echo "3. Scraping Viettel Store..."
           python3 code/3-Apple_Viettel_playwright.py
