--- a/.github/workflows/generate_report.yml
+++ b/.github/workflows/generate_report.yml
@@ -1,50 +1,53 @@
 name: Manual Report Generation
 
 on:
-    workflow_dispatch:
+  schedule:
+    # Runs at 07:00 UTC (14:00 PM Vietnam Time) every day
+    - cron: "0 7 * * *"
+  workflow_dispatch:
 
 permissions:
-    contents: write
+  contents: write
 
 jobs:
-    generate_report_only:
-        runs-on: ubuntu-latest
+  generate_report_only:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repository
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-            - name: Set up Python
-              uses: actions/setup-python@v5
-              with:
-                  python-version: "3.10"
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.10"
 
-            - name: Install dependencies
-              run: |
-                  python -m pip install --upgrade pip
-                  if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-            - name: Generate Report
-              run: |
-                  echo "Generating HTML Report..."
-                  python3 code/generate_report.py
+      - name: Generate Report
+        run: |
+          echo "Generating HTML Report..."
+          python3 code/generate_report.py
 
-            - name: Commit and Push Results
-              run: |
-                  git config --global user.name "GitHub Action Scraper"
-                  git config --global user.email "action@github.com"
+      - name: Commit and Push Results
+        run: |
+          git config --global user.name "GitHub Action Scraper"
+          git config --global user.email "action@github.com"
 
-                  # Add new content files (data) - Report generator might modify CSVs if it does normalization
-                  git add content/
+          # Add new content files (data) - Report generator might modify CSVs if it does normalization
+          git add content/
 
-                  # Add the updated report
-                  git add docs/index.html
+          # Add the updated report
+          git add docs/index.html
 
-                  # Commit if there are changes
-                  git commit -m "Manual: Update Report [skip ci]" || echo "No changes to commit"
+          # Commit if there are changes
+          git commit -m "Manual: Update Report [skip ci]" || echo "No changes to commit"
 
-                  # Pull latest changes to avoid conflicts
-                  git pull --rebase origin main
+          # Pull latest changes to avoid conflicts
+          git pull --rebase origin main
 
-                  # Push changes
-                  git push
+          # Push changes
+          git push
